@@ -46,118 +46,108 @@ fi
 
 all_samples=$(awk -F, '{print $1}' $splan)
 
-echo -e "Sample_ID,Sample_name,Number_of_reads,Fragment_length,Number_of_aligned_reads,Percent_of_aligned_reads,Percent_of_overlap,Number_of_duplicates,Percent_of_duplicates,Number_reads_ontarget,Percent_reads_ontarget,Number_reads_after_filt,Percent_reads_after_filt,Mean_depth,30X_cov,50X_cov,100X_cov" > mqc.stats
+n_header=0
+#echo -e "Number_of_reads,Fragment_length,Number_of_aligned_reads,Percent_of_aligned_reads, Percent_of_overlap,Number_of_duplicates,Percent_of_duplicates,Number_reads_ontarget,Percent_reads_ontarget,Number_reads_after_filt,Percent_reads_after_filt,Mean_depth,30X_cov,50X_cov,100X_cov" > mqc.stats
 
 for sample in $all_samples; do
   #SAMPLE NAME
   sname=$(grep "$sample," $splan | awk -F, '{print $2}')
 
+  header="Saple_ID,Sample_name"
+  output="${sample},${sname}"
+
   #ALIGNMENT
-  if [[ -e mapping/${sample}_bwa.log && -e mapping/${sample}.flagstats ]]; then
-    nb_reads=$(grep 'Total' mapping/${sample}_bwa.log | awk -F "\t" '{print $2}')
+  if [[ -e mapping/${sample}.flagstat ]]; then
+    nb_reads=$(grep 'in total' mapping/${sample}.flagstat | awk '{print $1}')
     if [[ $is_pe == 1 ]]; then
       nb_frag=$(($nb_reads / 2))
     else
       nb_frag=$nb_reads
     fi
-    tail -n +3 mapping/${sample}_bwa.log > mapping/${sample}_bwa.mqc
 
     #Mapping stats (always in reads - so must be converted for PE)
     if [[ $is_pe == 1 ]]; then
-	nb_paired_mapped=$(grep "with itself and mate mapped" mapping/${sample}.flagstats | awk '{print $1}')
-	nb_single_mapped=$(grep "singletons" mapping/${sample}.flagstats | awk '{print $1}')
+	nb_paired_mapped=$(grep "with itself and mate mapped" mapping/${sample}.flagstat | awk '{print $1}')
+	nb_single_mapped=$(grep "singletons" mapping/${sample}.flagstat | awk '{print $1}')
 	nb_mapped=$(( $nb_paired_mapped + $nb_single_mapped ))
 	perc_mapped=$(echo "${nb_mapped} ${nb_reads}" | awk ' { printf "%.*f",2,$1*100/$2 } ')
     else
-	nb_mapped=$(grep "mapped (" mapping/${sample}.flagstats | awk '{print $1}')
+	nb_mapped=$(grep "primary mapped (" mapping/${sample}.flagstat | awk '{print $1}')
 	perc_mapped=$(echo "${nb_mapped} ${nb_reads}" | awk ' { printf "%.*f",2,$1*100/$2 } ')
     fi
+    header+=",Number_of_fragments,Number_of_aligned_reads,Percent_of_aligned_reads"
+    output+=",${nb_frag},${nb_mapped},${perc_mapped}"
   fi
 
+  #if [[ -e mapping/${sample}_bwa.log ]]; then
+  #  tail -n +3 mapping/${sample}_bwa.log > mapping/${sample}_bwa.mqc
+  #fi
+
+  ## Fragment length
+  if [[ -e metrics/${sample}_insert_size_metrics.txt ]]; then
+    frag_length=$(grep -A2 "## METRIC" metrics/${sample}_insert_size_metrics.txt | tail -n 1 | awk '{print $1}')
+    header+=",Fragment_length"
+    output+=",${frag_length}"
+  fi
+
+  ## Overlap of read pairs
+  if ls metrics/${sample}*_collect_wgs_metrics.txt 1> /dev/null 2>&1; then
+    ## PERC_EXC_OVERLAP is between 0 and 0.5 as this is the fraction of aligned bases that would be filtered out because they were the second observation from an insert with overlapping reads.
+    ## So we multiply by 2 to have the % of base overlap
+    perc_over=$(grep -A2 "## METRIC" metrics/${sample}*_collect_wgs_metrics.txt | tail -n 1 | awk '{print $11}')
+    perc_over=$(echo "${perc_over}" | awk ' { printf "%.*f",2,$1*100 } ')
+    header+=",Percent_of_overlap"
+    output+=",${perc_over}"
+  fi
 
   #duplicates
-  if [[ -e preprocessing/${sample}.md.flagstats ]]; then
-    nb_dups=$(grep duplicates preprocessing/${sample}.md.flagstats | awk '{print $1}')
+  if [[ -e preprocessing/${sample}.md.flagstat ]]; then
+    nb_dups=$(grep 'primary duplicates' preprocessing/${sample}.md.flagstat | awk '{print $1}')
     perc_dups=$(echo "${nb_dups} ${nb_mapped}" | awk ' { printf "%.*f",2,$1*100/$2 } ')
-  else
-    nb_dups='NA'
-    perc_dups='NA'
+    header+=",Number_of_duplicates,Percent_of_duplicates"
+    output+=",${nb_dups},${perc_dups}"
   fi
 
   #On target
-  if [[ -e preprocessing/${sample}.onTarget.flagstats ]]; then
-    nb_ontarget=$(grep "mapped (" preprocessing/${sample}.onTarget.flagstats | awk '{print $1}')
+  if [[ -e preprocessing/${sample}.onTarget.flagstat ]]; then
+    nb_ontarget=$(grep "primary mapped (" preprocessing/${sample}.onTarget.flagstat | awk '{print $1}')
     perc_ontarget=$(echo "${nb_ontarget} ${nb_reads}" | awk ' { printf "%.*f",2,$1*100/$2 } ')
-  else
-    nb_ontarget='NA'
-    perc_ontarget='NA'
+    header+=",Number_reads_ontarget,Percent_reads_ontarget"
+    output+=",${nb_ontarget},${perc_ontarget}"
   fi
 
-  #On target + filtering
-  if ls preprocessing/${sample}*filtered.flagstats 1> /dev/null; then
-    nb_filt=$(grep "mapped (" preprocessing/${sample}*filtered.flagstats | awk '{print $1}')
+  #Filtering
+  if ls preprocessing/${sample}*filtered.flagstat 1> /dev/null; then
+    nb_filt=$(grep "primary mapped (" preprocessing/${sample}*filtered.flagstat | awk '{print $1}')
     perc_filt=$(echo "${nb_filt} ${nb_reads}" | awk ' { printf "%.*f",2,$1*100/$2 } ')
-  else
-    nb_filt='NA'
-    perc_filt='NA'
+    header+=",Number_reads_after_filt,Percent_reads_after_filt"
+    output+=",${nb_filt},${perc_filt}"
   fi
 
-
+  ##Coverage
   if [[ -e coverage/${sample}.mosdepth.summary.txt ]]; then
     mean_depth=$(tail -n 1 coverage/${sample}.mosdepth.summary.txt | awk '{print $4}')
-  else
-    mean_depth='NA'
+    header+=",Mean_depth"
+    output+=",${mean_depth}"
   fi
 
   if [[ -e coverage/${sample}.mosdepth.region.dist.txt ]]; then
     cov30=$(awk 'BEGIN{cov=0}$1=="total" && $2=="30"{cov=$3*100}END{printf "%.*f",2,cov}' coverage/${sample}.mosdepth.region.dist.txt)
     cov50=$(awk 'BEGIN{cov=0}$1=="total" && $2=="50"{cov=$3*100}END{printf "%.*f",2,cov}' coverage/${sample}.mosdepth.region.dist.txt)
     cov100=$(awk 'BEGIN{cov=0}$1=="total" && $2=="100"{cov=$3*100}END{printf "%.*f",2,cov}' coverage/${sample}.mosdepth.region.dist.txt)
+    header+=",30X_cov,50X_cov,100X_cov"
+    output+=",${cov30},${cov50},${cov100}"
   elif [[ -e coverage/${sample}.mosdepth.global.dist.txt ]]; then
     cov30=$(awk 'BEGIN{cov=0}$1=="total" && $2=="30"{cov=$3*100}END{printf "%.*f",2,cov}' coverage/${sample}.mosdepth.global.dist.txt)
     cov50=$(awk 'BEGIN{cov=0}$1=="total" && $2=="50"{cov=$3*100}END{printf "%.*f",2,cov}' coverage/${sample}.mosdepth.global.dist.txt)
     cov100=$(awk 'BEGIN{cov=0}$1=="total" && $2=="100"{cov=$3*100}END{printf "%.*f",2,cov}' coverage/${sample}.mosdepth.global.dist.txt)
-  else
-    cov30='NA'
-    cov50='NA'
-    cov100='NA'
+    header+=",30X_cov,50X_cov,100X_cov"
+    output+=",${cov30},${cov50},${cov100}"
   fi
 
-  if [[ -e metrics/${sample}_insert_size_metrics.txt ]]; then
-    frag_length=$(grep -A2 "## METRIC" metrics/${sample}_insert_size_metrics.txt | tail -n 1 | awk '{print $1}')
-  else
-    frag_length='NA'
+  if [ $n_header == 0 ]; then
+    echo -e $header > mqc.stats
+    n_header=1
   fi
-
-  if ls metrics/${sample}*_collect_wgs_metrics.txt 1> /dev/null 2>&1; then
-    ## PERC_EXC_OVERLAP is between 0 and 0.5 as this is the fraction of aligned bases that would be filtered out because they were the second observation from an insert with overlapping reads.
-    ## So we multiply by 2 to have the % of base overlap
-    perc_over=$(grep -A2 "## METRIC" metrics/${sample}*_collect_wgs_metrics.txt | tail -n 1 | awk '{print $11}')
-    perc_over=$(echo "${perc_over}" | awk ' { printf "%.*f",2,$1*100 } ')
-  else
-    perc_over='NA'
-  fi
-
-  echo -e ${sample},${sname},${nb_frag},${frag_length},${nb_mapped},${perc_mapped},${perc_over},${nb_dups},${perc_dups},${nb_ontarget},${perc_ontarget},${nb_filt},${perc_filt},${mean_depth},${cov30},${cov50},${cov100} >>mqc.stats
+  echo -e $output >> mqc.stats
 done
-
-
-## scores
-if [ -d tmb/ ]; then
-    echo ",TMB" > tmb_scores.mqc
-    for i in $(ls tmb/*)
-    do
-        score=$(awk -F"= " '$1=="TMB"{print $2}' $i)
-        id=$(basename $i | sed -e 's/_tmb.txt//')
-        echo -e $id","$score >> tmb_scores.mqc
-    done
-fi
-if [ -d msi/ ]; then
-    echo ",MSI" > msi_scores.mqc                                                                                                                                                                
-    for i in $(ls msi/*)
-    do
-        score=$(tail -n1 $i | awk '{print $3}')
-        id=$(basename $i)
-        echo -e $id","$score >> msi_scores.mqc
-    done
-fi
